[package]
name = "rfsx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
ftdi = "0.1"
indicatif = "0.16"
libftdi1-sys = "1"
parse_int = "0.6.0"
xmodem = { git = "https://github.com/oxidecomputer/xmodem.rs/" }
